# state_machine_future

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  publish.sh  rustfmt.toml
derive_state_machine_future/: CONTRIBUTING.md  Cargo.toml
derive_state_machine_future/src/: ast.rs  codegen.rs  lib.rs  phases.rs
src/: compile_fail_tests.rs  lib.rs  transition.rs
tests/: call_to_context.rs  cargo_readme_up_to_date.rs  context.rs  context_and_derives.rs  context_generic.rs  context_generic_bounds.rs  context_nongeneric.rs  context_semigeneric.rs  context_start_in_method.rs  context_start_method.rs  derives.rs  different_kinds_of_enums.rs  futures.rs  generics.rs  github_issue_25.rs  into_after.rs  name_collisions.rs  overlapping_states.rs  polling.rs  private_type_in_description.rs  ready_and_error.rs  start.rs  start_in.rs  state_conversions.rs  take_context_on_error.rs  take_context_on_ready.rs  take_context_value_on_ready.rs  take_in_poll_without_state_change.rs  transitions.rs  visibility.rs
