[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Bastian Köcher <git@kchr.de>"]
categories = ["asynchronous", "rust-patterns"]
description = """
Easily create type-safe `Future`s from state machines — without the boilerplate.
"""
documentation = "https://docs.rs/state_machine_future"
keywords = ["typestate", "derive", "state", "machine", "future"]
license = "Apache-2.0/MIT"
name = "state_machine_future"
readme = "./README.md"
repository = "https://github.com/fitzgen/state_machine_future"
version = "0.2.0"

[badges.travis-ci]
repository = "fitzgen/state_machine_future"

[dependencies]
futures = "0.1.18"
rent_to_own = "0.1.0"

[dependencies.derive_state_machine_future]
path = "./derive_state_machine_future/"
version = "=0.2.0"

[features]
# For debugging purposes, print the generated code to stdout during
# `derive(StateMachineFuture)` expansion.
debug_code_generation = ["derive_state_machine_future/debug_code_generation"]

[workspace]
