[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = """
Custom derive implementation for the `state_machine_future` crate. Use that
crate instead of this one directly.
"""
license = "Apache-2.0/MIT"
name = "derive_state_machine_future"
repository = "https://github.com/fitzgen/state_machine_future"
version = "0.1.7"
workspace = ".."

[badges.travis-ci]
repository = "fitzgen/state_machine_future"

[dependencies]
darling = "0.7.0"
heck = "0.3.0"
petgraph = "0.4.11"
proc-macro2 = "0.4.4"
quote = "0.6.3"
syn = "0.14.1"

[features]
# For debugging purposes, print the generated code to stdout during
# `derive(StateMachineFuture)` expansion.
debug_code_generation = []

[lib]
path = "./src/lib.rs"
proc_macro = true
