[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Bastian Köcher <git@kchr.de>"]
description = """
Custom derive implementation for the `state_machine_future` crate. Use that
crate instead of this one directly.
"""
license = "Apache-2.0/MIT"
name = "derive_state_machine_future"
repository = "https://github.com/fitzgen/state_machine_future"
version = "0.2.0"
workspace = ".."

[badges.travis-ci]
repository = "fitzgen/state_machine_future"

[dependencies]
darling = "0.8.0"
heck = "0.3.0"
petgraph = "0.4.11"
proc-macro2 = "0.4.21"
quote = "0.6.10"
syn = "0.15.0"

[features]
# For debugging purposes, print the generated code to stdout during
# `derive(StateMachineFuture)` expansion.
debug_code_generation = []

[lib]
path = "./src/lib.rs"
proc-macro = true
